rename pkg dan ubah import pkg per activity/layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
             Jangan memaksakan diri karena akan sangat berbahaya bagi anda dan orang lain.</item>
         <item>Memahami rambu lalu lintas adalah hal yang mutlak, jangan sampai melanggar rambu lalu lintas.
             Karena melanggar rambu lalu lintas adalah cikal bakal dari terjadinya kelalaian dan kecelakaan. </item>
-        <item>khusus pengendara mobil\nGunakan sabuk pengaman untuk mengurangi guncangan.</item>
+        <item>(khusus pengendara mobil)\nGunakan sabuk pengaman untuk mengurangi guncangan.</item>
         <item>Usahakan berkendara tidak terlalu lambat ataupun terlalu cepat. Kondisikan kecepatan anda sesuai dengan aturan lalu lintas yang berlaku.</item>
     </string-array>
 
